--- a/environment.yml
+++ b/environment.yml
@@ -1,38 +1,38 @@
 name: swim-qpid-proton
 dependencies:
   - _libgcc_mutex=0.1=main
-  - atomicwrites=1.3.0=py37_1
-  - attrs=19.3.0=py_0
-  - ca-certificates=2019.11.27=0
-  - certifi=2019.11.28=py37_0
-  - coverage=4.5.4=py37h7b6447c_0
-  - importlib_metadata=1.3.0=py37_0
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - more-itertools=8.0.2=py_0
-  - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1d=h7b6447c_3
-  - packaging=19.2=py_0
-  - pip=19.3.1=py37_0
-  - pluggy=0.13.1=py37_0
-  - py=1.8.0=py_0
-  - pyparsing=2.4.5=py_0
-  - pytest=5.0.1=py37_0
-  - pytest-cov=2.8.1=py_0
-  - python=3.7.5=h0371630_0
-  - pyyaml=5.2=py37h7b6447c_0
-  - readline=7.0=h7b6447c_5
-  - setuptools=42.0.2=py37_0
-  - six=1.13.0=py37_0
-  - sqlite=3.30.1=h7b6447c_0
-  - tk=8.6.8=hbc83047_0
-  - wcwidth=0.1.7=py37_0
-  - wheel=0.33.6=py37_0
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - zipp=0.6.0=py_0
+  - _openmp_mutex=4.5=1_gnu
+  - attrs=21.2.0=pyhd3eb1b0_0
+  - ca-certificates=2021.10.26=h06a4308_2
+  - certifi=2021.10.8=py39h06a4308_0
+  - coverage=5.5=py39h27cfd23_2
+  - iniconfig=1.1.1=pyhd3eb1b0_0
+  - ld_impl_linux-64=2.35.1=h7274673_9
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=9.3.0=h5101ec6_17
+  - libgomp=9.3.0=h5101ec6_17
+  - libstdcxx-ng=9.3.0=hd4cf53a_17
+  - more-itertools=8.10.0=pyhd3eb1b0_0
+  - ncurses=6.3=h7f8727e_0
+  - openssl=1.1.1l=h7f8727e_0
+  - packaging=21.0=pyhd3eb1b0_0
+  - pip=21.2.4=py39h06a4308_0
+  - pluggy=0.13.1=py39h06a4308_0
+  - py=1.10.0=pyhd3eb1b0_0
+  - pyparsing=3.0.4=pyhd3eb1b0_0
+  - pytest=6.2.4=py39h06a4308_2
+  - pytest-cov=2.12.1=pyhd3eb1b0_0
+  - python=3.9.7=h12debd9_1
+  - pyyaml=6.0=py39h7f8727e_1
+  - readline=8.1=h27cfd23_0
+  - setuptools=58.0.4=py39h06a4308_0
+  - sqlite=3.36.0=hc218d9a_0
+  - tk=8.6.11=h1ccaba5_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - tzdata=2021e=hda174b7_0
+  - wheel=0.37.0=pyhd3eb1b0_1
+  - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
   - pip:
-    - python-qpid-proton==0.30.0
+    - python-qpid-proton==0.35.0
